styles/_sections.scss
.header,
.content,
.footer {
  max-width: 760px;
  margin: 0 auto;
  padding: 0 2rem;
}

.header {
  margin-bottom: 7rem;
  font-size: 2.4rem;

  .navigation {
    float: right;

    ul {
      margin: 0;
      padding: 0;
      list-style: none;

      li {
        display: inline-block;
        margin-right: 2.5rem;

        &:last-of-type {
          margin: 0;
        }

        a.active {
          text-decoration: underline;
          text-decoration-color: $color-link;
          text-decoration-thickness: .3rem;
          text-underline-offset: .7rem;
        }
      }
    }
  }
}

.content {
  p {
    & + h2 {
      margin-top: 4rem;
    }
  }

  .highlight {
    margin: 10rem 0 5rem;
    font-size: 3.2rem;
    color: $color-highlight;
  }

  .book-list,
  .post-list {
    margin: 5rem 0;
    padding: 0;
    list-style: none;
  }

  .post-list {
    li {
      margin-top: 2.5rem;
    }

    a {
      font-size: 2.4rem;
      line-height: 1.2;
    }
  }

  .book-list {
    display: block;
    margin-top: 2rem;

    li {
      display: inline-block;
      margin: 3rem 2% 0;
      height: 100%;
      width: 22%;
      vertical-align: bottom;

      &:first-child {
        margin-left: 0;
      }

      &:nth-child(4n) {
        margin-right: 0;

        & + li {
          margin-left: 0;
        }
      }

      .book-image {
        margin: 0;
        width: 100%;
        max-height: 240px;
        opacity: .8;
        transition: all .02s ease-out;
      }

      a:hover .book-image {
        opacity: 1;
      }
    }
  }

  .book-image,
  .banner-image {
    margin-bottom: 4.5rem;
    height: auto;
  }

  .book-image {
    display: inline-block;
    margin: 1rem 4% 1.5rem 0;
    width: 22%;
    vertical-align: top;

    & + header {
      display: inline-block;
      margin-bottom: 1.5rem;
      width: 74%;
    }
  }

  .book-title {
    margin: .6rem 0 0;
    line-height: 1.05;
  }

  .book-author {
    margin: 1rem 0 2.4rem;
    color: $color-secondary-alt;
    line-height: 1.2;
  }

  .book-labels {
    padding: 0;
    list-style: none;

    li {
      display: inline-block;
      margin: 0 .8rem 0 0;
      padding: 0 .8rem;
      font-size: 1.5rem;
      font-weight: bold;
      text-transform: capitalize;
      color: $color-highlight;
      background: $color-secondary;
      border-radius: .4rem;
    }
  }

  .book-date {
    text-decoration: none;

    time {
      display: inline-block;
    }

    &:hover time {
      color: $color-link-alt;
    }
  }

  .post-title {
    margin-bottom: 0;

    & + time {
      margin-bottom: 4rem;
    }
  }
}

.footer {
  margin-top: 7rem;
  font-size: 1.55rem;
  line-height: 1.2;
  font-weight: bold;
  color: $color-secondary;
  letter-spacing: -.02rem;

  & > p {
    padding-top: 1rem;
    border-top: 2px solid $color-secondary;
  }

  a {
    color: $color-secondary;

    &:hover {
      color: $color-secondary-alt;
    }
  }
}

